{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 22,
  "lineage": "6f7c585d-ee01-9577-4089-99fcd7c5e1f3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ecs-fargate-private-subnet-for-service-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808694706516:subnet/subnet-01b5f2ee3cc0b47f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "172.30.48.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b5f2ee3cc0b47f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808694706516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ecs-fargate-private-subnet-for-service-1a",
              "zone": "us-east-1a"
            },
            "vpc_id": "vpc-03cb1bf72bd4fab17"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ecs-fargate-private-subnet-for-service-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808694706516:subnet/subnet-0515737f5bd5dccb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "172.30.64.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0515737f5bd5dccb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808694706516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ecs-fargate-private-subnet-for-service-1b",
              "zone": "us-east-1b"
            },
            "vpc_id": "vpc-03cb1bf72bd4fab17"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ecs-fargate-private-subnet-for-service-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808694706516:subnet/subnet-00a0a7d2b3eba89e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4091,
            "cidr_block": "172.30.80.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a0a7d2b3eba89e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808694706516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ecs-fargate-private-subnet-for-service-1c",
              "zone": "us-east-1c"
            },
            "vpc_id": "vpc-03cb1bf72bd4fab17"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ecs-fargate-public-subnet-for-alb-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808694706516:subnet/subnet-0ca68cf41641f9553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "172.30.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca68cf41641f9553",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808694706516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ecs-fargate-public-subnet-for-alb-1a",
              "zone": "us-east-1a"
            },
            "vpc_id": "vpc-03cb1bf72bd4fab17"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ecs-fargate-public-subnet-for-alb-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808694706516:subnet/subnet-0011c98da49f353e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "172.30.16.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0011c98da49f353e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808694706516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ecs-fargate-public-subnet-for-alb-1b",
              "zone": "us-east-1b"
            },
            "vpc_id": "vpc-03cb1bf72bd4fab17"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ecs-fargate-public-subnet-for-alb-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808694706516:subnet/subnet-0620ec3e0132e4129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4091,
            "cidr_block": "172.30.32.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0620ec3e0132e4129",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808694706516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ecs-fargate-public-subnet-for-alb-1c",
              "zone": "us-east-1c"
            },
            "vpc_id": "vpc-03cb1bf72bd4fab17"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808694706516:vpc/vpc-03cb1bf72bd4fab17",
            "cidr_block": "172.30.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0213cac826861b101",
                "cidr_block": "172.30.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-3e1aa444",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03cb1bf72bd4fab17",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b16d61677bb22489",
            "owner_id": "808694706516",
            "tags": {
              "Name": "ecs-fargate-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "demoapp_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808694706516:loadbalancer/app/dev-demoapp/6c8aa8b0a5b28ab0",
            "arn_suffix": "app/dev-demoapp/6c8aa8b0a5b28ab0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-demoapp-929898415.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:808694706516:loadbalancer/app/dev-demoapp/6c8aa8b0a5b28ab0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-demoapp",
            "security_groups": [
              "sg-08d4f2da7a9422ed3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0011c98da49f353e4"
              },
              {
                "subnet_id": "subnet-0620ec3e0132e4129"
              },
              {
                "subnet_id": "subnet-0ca68cf41641f9553"
              }
            ],
            "subnets": [
              "subnet-0011c98da49f353e4",
              "subnet-0620ec3e0132e4129",
              "subnet-0ca68cf41641f9553"
            ],
            "vpc_id": "vpc-03cb1bf72bd4fab17",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_subnet.ecs-fargate-public-subnet-for-alb-1a",
            "data.aws_subnet.ecs-fargate-public-subnet-for-alb-1b",
            "data.aws_subnet.ecs-fargate-public-subnet-for-alb-1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end_demoapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808694706516:listener/app/dev-demoapp/6c8aa8b0a5b28ab0/46ca25628b57b737",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:808694706516:targetgroup/demoapp-target-group/a17b58e23b6a6371",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808694706516:listener/app/dev-demoapp/6c8aa8b0a5b28ab0/46ca25628b57b737",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:808694706516:loadbalancer/app/dev-demoapp/6c8aa8b0a5b28ab0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.demoapp_lb",
            "aws_alb_target_group.demoapp_target",
            "aws_security_group.lb",
            "data.aws_subnet.ecs-fargate-public-subnet-for-alb-1a",
            "data.aws_subnet.ecs-fargate-public-subnet-for-alb-1b",
            "data.aws_subnet.ecs-fargate-public-subnet-for-alb-1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "demoapp_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808694706516:targetgroup/demoapp-target-group/a17b58e23b6a6371",
            "arn_suffix": "targetgroup/demoapp-target-group/a17b58e23b6a6371",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/index",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808694706516:targetgroup/demoapp-target-group/a17b58e23b6a6371",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "demoapp-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03cb1bf72bd4fab17"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808694706516:security-group/sg-096843920a639884f",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096843920a639884f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d4f2da7a9422ed3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demoapp-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "808694706516",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03cb1bf72bd4fab17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808694706516:security-group/sg-08d4f2da7a9422ed3",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d4f2da7a9422ed3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demoapp-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "808694706516",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03cb1bf72bd4fab17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}